Vista Movile de Desarollo Web

--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="img/logo_final.png" alt="Gisea" class="gisea-logo">
+                    <a href="index.html"></a>
                 </a>
                 <!--MENU DE HAMBURGESA-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -46,9 +47,9 @@
                                 SERVICES
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Diseño Web</a></li>
+                                <li><a class="dropdown-item" href="service_desarollo_web.html">Desarollo Web</a></li>
                                 <li><a class="dropdown-item" href="#">Recursos Humanos</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Capacitacion IT</a></li>
                                 <li></li>
                             </ul>
                         </li>
