--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                                 SERVICES
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Diseño Web</a></li>
+                                <li><a class="dropdown-item" href="service_desarollo_web.html">Desarollo Web</a></li>
                                 <li><a class="dropdown-item" href="#">Recursos Humanos</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Capacitacion IT</a></li>
                                 <li></li>
                             </ul>
                         </li>
