Ultimos detalles de vista mobile

--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -139,7 +139,7 @@
                         <ul>
                             <li>Hospedaje por 2 AÑOS <img src="icons/check_icon.svg" alt="" class="icon-check-hospedaje"></li>
                             <li>Sin Sitio<br> Multibilingüe Simple <img src="icons/ban_icon.svg" alt="" class="icon-check-multibilingue"></li>
-                            <li>Plataforma Moderna <br> y Funcional <img src="icons/check_icon.svg" class="icon-check-moderna"></li>
+                            <li>Plataforma Moderna <br> y Funcional <img src="icons/check_icon.svg" class="icon-check-mdnpequeña"></li>
                         </ul>
                         <div class="separator-container">
                             <ul>
@@ -180,13 +180,13 @@
                         <h2>EMPRESAS GRANDES O CORPORATIVOS</h2>
                         <div class="price">DESDE $50,000 a $140,000 MXN</div>
                         <ul>
-                            <li>Hospedaje por 2 AÑOS <img src="icons/check_icon.svg" alt="" class="icon-check-hospedaje"></li>
-                            <li>Plataforma Moderna y Funcional <img src="icons/check_icon.svg" alt="" class="icon-check-empmedianas"></li>
-                            <li>Sin Sitio Multilingüe Simple <img src="icons/info_icon.svg" class="icon-check-bilingue" data-bs-toggle="tooltip" title="Costo Extra"></li>
+                            <li>Hospedaje por 2 AÑOS <img src="icons/check_icon.svg" alt="" class="icon-check-empgrandes-hospedaje"></li>
+                            <li>Plataforma Moderna y <br>Funcional <img src="icons/check_icon.svg" alt="" class="icon-check-empgrandes"></li>
+                            <li>Sin Sitio <br>Multilingüe Simple <img src="icons/info_icon.svg" class="icon-check-empgrandes-bilingue" data-bs-toggle="tooltip" title="Costo Extra"></li>
                         </ul>
                         <div class="separator-container">
                             <ul>
-                                <li>Más de 8 Páginas en el Sitio <img src="icons/info_icon.svg" alt="" class="icon-check-empgrnd"></li>
+                                <li>Más de 8 Páginas <br>en el Sitio <img src="icons/info_icon.svg" alt="" class="icon-check-empgrnd" data-bs-toggle="tooltip" title="Personalizacion Extra"></li>
                             </ul>
                         </div>
                         <div class="btn-centro">
