subiendo ultimos cambios

--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -271,7 +271,7 @@
                 </div><!-- End Portfolio Item -->
 
                 <!--Arquitectura Items-->
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-seguridad">
+                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-arquitectura">
                     <img src="img/portafolio-img/arcade_arquitectura.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
                         <h4>Arcade Arquitectura<h4>
@@ -361,7 +361,7 @@
                 </div><!-- End Portfolio Item -->
 
                 <!--Restaurante Items-->
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-barberia">
+                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-restaurantes">
                     <img src="img/portafolio-img/gisea_restaurante.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
                         <h4>Gisea Restaurante<h4>
