--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -160,7 +160,7 @@
                         <ul>
                             <li>Hospedaje por 2 AÑOS <img src="icons/check_icon.svg" alt="" class="icon-check-hospedaje"></li>
                             <li>Plataforma Moderna <br> y Funcional <img src="icons/check_icon.svg" class="icon-check-mdnfuncional"></li>
-                            <li>Sin Sitio <br> Multilingüe Simple <img src="icons/info_icon.svg" class="icon-check" data-bs-toggle="tooltip" title="Costo Extra"></li>
+                            <li class="alinear-texto">Sin Sitio <br> Multilingüe Simple <img src="icons/info_icon.svg" class="icon-check" data-bs-toggle="tooltip" title="Costo Extra"></li>
                         </ul>
                         <div class="separator-container">
                             <ul>
@@ -181,8 +181,8 @@
                         <div class="price">DESDE $50,000 a $140,000 MXN</div>
                         <ul>
                             <li>Hospedaje por 2 AÑOS <img src="icons/check_icon.svg" alt="" class="icon-check-empgrandes-hospedaje"></li>
-                            <li>Plataforma Moderna y <br>Funcional <img src="icons/check_icon.svg" alt="" class="icon-check-empgrandes"></li>
-                            <li>Sin Sitio <br>Multilingüe Simple <img src="icons/info_icon.svg" class="icon-check-empgrandes-bilingue" data-bs-toggle="tooltip" title="Costo Extra"></li>
+                            <li>Plataforma Moderna y Funcional <img src="icons/check_icon.svg" alt="" class="icon-check-empgrandes"></li>
+                            <li>Sin Sitio Multilingüe Simple <img src="icons/info_icon.svg" class="icon-check-empgrandes-bilingue" data-bs-toggle="tooltip" title="Costo Extra"></li>
                         </ul>
                         <div class="separator-container">
                             <ul>
@@ -245,7 +245,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-barberia">
                     <img src="img/portafolio-img/barberia_shop.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Barbershop</h4>
+                        <h4><a href="https://giseamex.com/web/BarberShops/razor/index.html" class="a-color" data-bs-toggle="tooltip" title="Haz clic para conocer el sitio">Barbershop</a></h4>
                         <div class="portfolio-icons">
                             <a href="img/portafolio-img/barberia_shop.png" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
@@ -259,7 +259,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-seguridad">
                     <img src="img/portafolio-img/eco_seguridad.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>ECO 5-0<h4>
+                        <h4><a href="https://rych182.github.io/wero/"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">ECO 5-0</a><h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/eco_seguridad.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
@@ -274,7 +274,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-arquitectura">
                     <img src="img/portafolio-img/arcade_arquitectura.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Arcade Arquitectura<h4>
+                        <h4><a href="service_desarollo_web.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Arcade Arquitectura</a><h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/arcade_arquitectura.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
@@ -289,7 +289,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-arquitectura">
                     <img src="img/portafolio-img/arclabs_arquitectura.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Arclabs Arquitectura<h4>
+                        <h4><a href="https://giseamex.com/web/architechture/arclabs/index.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Arclabs Arquitectura</a></h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/arclabs_arquitectura.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
@@ -304,7 +304,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-barberia">
                     <img src="img/portafolio-img/barberia_gisea.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Gisea Haircare<h4>
+                        <h4><a href="service_desarollo_web.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Gisea Haircare</a></h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/barberia_gisea.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
@@ -319,7 +319,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-arquitectura">
                     <img src="img/portafolio-img/gisea_arquitectura.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Gisea Arquitectura<h4>
+                        <h4><a href="service_desarollo_web.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Gisea Arquitectura</a></h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/gisea_arquitectura.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
@@ -334,7 +334,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-restaurantes">
                     <img src="img/portafolio-img/caviar_restaurante.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Gisea Caviar<h4>
+                        <h4><a href="https://giseamex.com/web/restaurants/caviar/index.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Gisea Caviar</a></h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/caviar_restaurante.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
@@ -349,7 +349,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-barberia">
                     <img src="img/portafolio-img/alotan_barberia.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Alotan Barber Shop<h4>
+                        <h4><a href="https://giseamex.com/web/BarberShops/alotan/index.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Alotan Barber Shop</a></h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/alotan_barberia.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
@@ -364,6 +364,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-restaurantes">
                     <img src="img/portafolio-img/gisea_restaurante.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
+                        <h4><a href="https://giseamex.com/web/BarberShops/alotan/index.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Alotan Barber Shop</a></h4>
                         <h4>Gisea Restaurante<h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/gisea_restaurante.png" class="glightbox preview-link"><i
@@ -379,6 +380,7 @@
                  <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-restaurantes">
                     <img src="img/portafolio-img/taste_restaurante.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
+                        <h4><a href="https://giseamex.com/web/BarberShops/alotan/index.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Alotan Barber Shop</a></h4>
                         <h4>Taste Restaurante<h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/taste_restaurante.png" class="glightbox preview-link"><i
@@ -394,7 +396,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-restaurantes">
                     <img src="img/portafolio-img/pato_restaurante.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Pato Restaurante<h4>
+                        <h4><a href="https://rych182.github.io/Restaurante/"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Pato Restaurante</a></h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/pato_restaurante.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
@@ -409,7 +411,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-abogados">
                     <img src="img/portafolio-img/judge_abogados.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Gisea Judge<h4>
+                        <h4><a href="service_desarollo_web.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Gisea Judge</a></h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/judge_abogados.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
@@ -424,7 +426,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-abogados">
                     <img src="img/portafolio-img/law_abogados.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Law Abogados<h4>
+                        <h4><a href="service_desarollo_web.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Law Abogados</a></h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/law_abogados.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
@@ -439,7 +441,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-abogados">
                     <img src="img/portafolio-img/justice_abogados.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Justice Abogados<h4>
+                        <h4><a href="https://giseamex.com/web/lawyers/justice/index.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Justice Abogados</a></h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/justice_abogados.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
@@ -454,7 +456,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-doctores">
                     <img src="img/portafolio-img/gisea_doctor.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Gisea Doctor<h4>
+                        <h4><a href="service_desarollo_web.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Gisea Doctor</a></h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/gisea_doctor.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
@@ -469,7 +471,7 @@
                  <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-doctores">
                     <img src="img/portafolio-img/klinik_doctores.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Klinik Doctores</h4>
+                        <h4><a href="https://giseamex.com/web/doctors/klinik/index.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Klinik Doctores</a></h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/klinik_doctores.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
@@ -484,7 +486,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-doctores">
                     <img src="img/portafolio-img/novena_doctores.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h4>Novena Doctores<h4>
+                        <h4><a href="service_desarollo_web.html"data-bs-toggle="tooltip" title="Haz clic para conocer el sitio" class="a-color">Novena Doctores</a></h4>
                                 <div class="portfolio-icons">
                                     <a href="img/portafolio-img/novena_doctores.png" class="glightbox preview-link"><i
                                             class="bi bi-zoom-in"></i></a>
