agregando banderas a portafolio

--- a/index.html
+++ b/index.html
@@ -70,8 +70,16 @@
                                     <i id="dropdownIcon" class="fa-solid fa-angle-down"></i>
                                 </button>
                                 <div id="languageDropdown" class="dropdown-content">
-                                    <a href="#" data-lang="SPA" data-flag="icons/bandera_mex.png">SPA</a>
-                                    <a href="#" data-lang="ENG" data-flag="icons/bandera_usa.png">ENG</a>
+                                    <a href="#" data-lang="SPA" data-flag="icons/bandera_mex.png">
+                                        <img src="icons/bandera_mex.png" alt="SPA" style="width: 40px; height:40px;">
+                                        SPA
+                                    </a>
+                                    <a href="#" data-lang="ENG" data-flag="icons/bandera_usa.png">
+                                        <img src="icons/bandera_usa.png" alt="SPA" style="width: 40px; height:40px;">
+                                        ENG</a>
+                                    <a href="#" data-lang="JPN" data-flag="icons/bandera_jpn.png">
+                                        <img src="icons/bandera_jpn.png" alt="JPN" style="width: 40px; height:40px;">
+                                        JPN</a>
                                 </div>
                             </div>
                         </li>
