Agregando a portafolio sitio web de psicologa

--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -568,6 +568,21 @@
                         </div>
                     </div>
                 </div><!-- End Portfolio Item -->
+                
+                <!--Doctores Items-->
+                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-doctores">
+                    <img src="img/portafolio-img/sitio_web_psicologa.png" class="img-fluid" alt="">
+                    <div class="portfolio-info">
+                        <h4><a href="sitio_web_psicologa/index.html" data-bs-toggle="tooltip"
+                                title="Haz clic para conocer el sitio" class="a-color" target="_blank">Psicologa Asesoria</a></h4>
+                        <div class="portfolio-icons">
+                            <a href="img/portafolio-img/sitio_web_psicologa.png" class="glightbox preview-link"><i
+                                    class="bi bi-zoom-in"></i></a>
+                            <a href="portfolio-details.html" class="dsetails-link"><i class="bi bi-link-45deg"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div><!-- End Portfolio Item -->
 
                  <!--Automotriz Items-->
                  <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-auto">
