--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -574,7 +574,7 @@
                     <img src="img/portafolio-img/sitio_web_psicologa.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
                         <h4><a href="sitio_web_psicologa/index.html" data-bs-toggle="tooltip"
-                                title="Haz clic para conocer el sitio" class="a-color" target="_blank">Asesoria Psicologica</a></h4>
+                                title="Haz clic para conocer el sitio" class="a-color" target="_blank">Asesorias Psicologica</a></h4>
                         <div class="portfolio-icons">
                             <a href="img/portafolio-img/sitio_web_psicologa.png" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
