Agregando los cambios de texto y alineacion

--- a/sitio_web_psicologa/index.html
+++ b/sitio_web_psicologa/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Psicologa</title>
+  <title>Psicóloga</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -46,7 +46,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/logo_sin_fondo.png" alt="">
-        <h1 class="sitename">Psicologa</h1><span>.</span>
+        <h1 class="sitename">Psicóloga</h1><span>.</span>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -97,8 +97,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-10">
-            <h2 data-aos="fade-up" data-aos-delay="100">Asesoria Psicologica</h2>
-            <p data-aos="fade-up" data-aos-delay="200">Existe una solucion a tus problemas</p>
+            <h2 data-aos="fade-up" data-aos-delay="100">Acompañamiento Psicológico</h2>
+            <p data-aos="fade-up" data-aos-delay="200">Un lugar para sentirte, pensarte y hablar libremente.</p>
           </div>
           <!--<div class="col-lg-5" data-aos="fade-up" data-aos-delay="300">
             <form action="forms/newsletter.php" method="post" class="php-email-form">
@@ -155,12 +155,13 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row align-items-xl-center gy-5">
-
-          <div class="col-xl-5 content">
-            <h3>Como Trabajo</h3>
-            <h2>Sobre Mi</h2>
-            <p>Soy [Nombre de la Psicóloga], licenciada en Psicología con [X] años de experiencia. Mi misión es
-              ofrecerte un espacio seguro y de confianza para que puedas explorar tus emociones y encontrar tu bienestar
+          <div class="col-xl-5 content sobre-mi">
+            <h3>Cómo Trabajo</h3>
+            <h2>Sobre Mí</h2>
+            <p> Soy <b>Laura Hernandez, Licenciada en Psicología y Maestra en Psicoterapia con Enfoque Psicoanalítico.</b> 
+              <br>Desde <b>2013</b> me dedico a acompañar procesos terapéuticos <br>desde una escucha profunda, respetuosa y sin juicios.
+            <br>Creo en la importancia de ofrecer un espacio seguro <br> donde puedas explorar lo que sientes, piensas y repites, <br>y así ir comprendiendo más de ti misma/o.
+            <br><i><b>Será un gusto acompañarte en tu proceso.</b></i>
             </p>
             <a href="#contact" class="read-more"><span>Agenda Una Cita</span><i class="bi bi-arrow-right"></i></a>
           </div>
@@ -170,26 +171,33 @@
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box">
-                  <img src="assets/img/flor_psi_sin_fondo.png" alt="" width="160vh" height="150vh"
+                  <img src="assets/img/flor_psi_sin_fondo.png" alt="" width="130vh" height="125vh"
                     class="mx-auto d-block">
                   <h3>Mi enfoque</h3>
-                  <p>Trabajo con técnicas de terapia [nombre de la técnica] para ayudarte a superar tus desafíos.</p>
+                  <p>
+                  Trabajo con un <b>enfoque psicodinámico.</b> <br> Para mí es como un viaje hacia aquello que no siempre vemos de nosotros mismos. <br>
+                 <br> No se trata solo de lo que ocurre hoy, sino de comprender de dónde vienen ciertas emociones, reacciones o patrones que se repiten en tu vida.
+                 Es un espacio para hablar, reflexionar y sentirte acompañado/a en el proceso.
+                  </p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box">
-                  <img src="assets/img/manos_sin_fondo.png" alt="" width="160vh" height="150vh" class="mx-auto d-block">
+                  <img src="assets/img/manos_sin_fondo.png" alt="" width="130vh" height="125vh" class="mx-auto d-block">
                   <h3>Valores</h3>
-                  <p>Empatía, confianza y confidencialidad son los pilares de mi práctica.</p>
+                  <p>Creo profundamente en el poder de la <b>escucha empática y respetuosa.</b> Mi compromiso es ofrecerte un espacio seguro, donde puedas expresarte libremente, sin miedo a ser juzgado/a. <br> <br>
+                  La confidencialidad, la ausencia de prejuicios, el respeto por tu historia y el acompañamiento genuino, son pilares fundamentales en cada proceso terapéutico que acompaño.</p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="icon-box">
                   <img src="assets/img/cabeza_ps.png" alt="" width="160vh" height="150vh" class="mx-auto d-block">
-                  <h3>Atencion Personalizada</h3>
-                  <p>Sesiones por videollamada adaptadas a tus necesidades y horarios.</p>
+                  <h3>Atención Personalizada</h3>
+                  <p>Brindo atención psicológica en línea, lo que me permite acompañarte estés donde estés, con la misma calidad y calidez que en un espacio presencial.
+                 <br> <br> Si prefieres sesiones presenciales tengo un espacio en Cuernavaca, Morelos.
+                <br> <br> Trabajo con niños, adolescentes, adultos y parejas, adaptando el proceso terapéutico a las necesidades y momento de vida de cada persona.</p>
                 </div>
               </div> <!-- End Icon Box -->
 
@@ -197,8 +205,15 @@
                 <div class="icon-box">
                   <img src="assets/img/flor_fondo_transparente.png" alt="" width="190vh" height="100vh"
                     class="mx-auto d-block">
-                  <h3>Tu bienestar</h3>
-                  <p>Estoy aquí para acompañarte en cada paso hacia una vida plena y satisfactoria</p>
+                  <h3>Formación y supervisión clínica</h3>
+                <p>Además del trabajo clínico con pacientes, también ofrezco espacios formativos para profesionales de la salud mental. 
+                <br> <br>
+                <b>Brindo cursos y capacitaciones en psicometría y evaluación psicológica,</b>pensados para estudiantes y psicólogos/as que desean actualizarse o fortalecer sus herramientas clínicas.
+                <br><br> 
+                También realizo supervisión de casos clínicos, ofreciendo un espacio de escucha y reflexión que acompaña a otros terapeutas en el análisis de sus procesos, con respeto, ética y sin juicios.
+                <br><br> 
+                <b style="font-style: italic;">Si estás interesado/a en alguno de estos espacios, puedes escribirme con gusto.</b></p>
+                
                 </div>
               </div> <!-- End Icon Box -->
 
@@ -234,7 +249,7 @@
             <div class="stats-item text-center w-100 h-100">
               <div class="d-flex align-items-center justify-content-center">
                 <i class="bi bi-plus fs-1"></i>
-                <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1"
+                <span data-purecounter-start="0" data-purecounter-end="13" data-purecounter-duration="1"
                   class="purecounter"></span>
               </div>
               <p>Años de experiencia</p>
