--- a/gisea_regalos/index.html
+++ b/gisea_regalos/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-	<title>Gisea Regalos</title>
+	<title>Gisea Peluches</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Colo Shop Template">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
 	<link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/owl.carousel.css">
 	<link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
@@ -86,29 +86,27 @@
 					<div class="row">
 						<div class="col-lg-12 text-right">
 							<div class="logo_container">
-								<a href="#">Gisea<span>Regalos</span></a>
+								<a href="#">Gisea<span> Amigurumis</span></a>
 							</div>
 							<nav class="navbar">
 								<ul class="navbar_menu">
 									<li><a href="#">Inicio</a></li>
 									<li class="menu_item has-children">
-										<a href="#">Regalos Por Tipo</a>
+										<a href="#">Amigurumis</a>
 										<ul class="submenu">
-											<li><a href="#">Cumpleaños</a></li>
-											<li><a href="#">Aniversarios</a></li>
-											<li><a href="#">Bodas</a></li>
+											<li><a href="#">Caricaturas y Personajes</a></li>
+											<li><a href="#">Flores y Naturaleza</a></li>
+											<li><a href="#">Famosos</a></li>
+											<li><a href="#">Llaveros y portalapices</a></li>
+											<li><a href="#">Animalitos y Animales Fantasia</a></li>
+											<li><a href="#">Coronas de Adviento</a></li>
 										</ul>
 									</li>
-									<li class="menu_item has-children">
-										<a href="#">Regalos Por Ocasion</a>
-										<ul class="submenu">
-											<li><a href="#">Navidad</a></li>
-											<li><a href="#">San Valentín</a></li>
-											<li><a href="#">Graduaciones</a></li>
-										</ul>
+									<li>
+										<a href="#">Personaliza tu Amigurumi</a>
 									</li>
-									<li><a href="#">Reseñas</a></li>
-									<li><a href="contact.html">contact</a></li>
+									<li><a href="#">Nuestros Clientes Opinan</a></li>
+									<li><a href="contact.html">Contactame</a></li>
 								</ul>
 								<!--Buscar - Inicio de Sesion y Carrito de Compras
 							<ul class="navbar_user">
@@ -137,18 +135,22 @@
 			<div class="hamburger_close"><i class="fa fa-times" aria-hidden="true"></i></div>
 			<div class="hamburger_menu_content text-right">
 				<ul class="menu_top_nav">
+					<li class="menu_item"><a href="#">Inicio</a></li>
 					<li class="menu_item has-children">
 						<a href="#">
-							usd
+							Amigurumis
 							<i class="fa fa-angle-down"></i>
 						</a>
 						<ul class="menu_selection">
-							<li><a href="#">cad</a></li>
-							<li><a href="#">aud</a></li>
-							<li><a href="#">eur</a></li>
-							<li><a href="#">gbp</a></li>
+							<li><a href="#">Caricaturas y Personajes</a></li>
+							<li><a href="#">Flores y Naturaleza</a></li>
+							<li><a href="#">Famosos</a></li>
+							<li><a href="#">LLaveros y Portalapices</a></li>
+							<li><a href="#">Animalitos y Animalitos Fantasia</a></li>
+							<li><a href="#">Coronas de Adviento</a></li>
 						</ul>
 					</li>
+					<!--
 					<li class="menu_item has-children">
 						<a href="#">
 							English
@@ -171,30 +173,39 @@
 							<li><a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>Register</a></li>
 						</ul>
 					</li>
-					<li class="menu_item"><a href="#">home</a></li>
-					<li class="menu_item"><a href="#">shop</a></li>
-					<li class="menu_item"><a href="#">promotion</a></li>
-					<li class="menu_item"><a href="#">pages</a></li>
-					<li class="menu_item"><a href="#">blog</a></li>
-					<li class="menu_item"><a href="#">contact</a></li>
+					-->
+					<li class="menu_item"><a href="#">Personaliza Tu Amigurumi</a></li>
+					<li class="menu_item"><a href="#">Nuestros Clientes Opinan</a></li>
+					<li class="menu_item"><a href="#">Contactame</a></li>
 				</ul>
 			</div>
 		</div>
 
 		<!-- Slider -->
 
-		<div class="main_slider" style="background-image:url(images/regalos.jpg)">
-			<div class="container fill_height">
-				<div class="row align-items-center fill_height">
-					<div class="col">
-						<div class="main_slider_content">
-							<h6>Regalos para Toda Ocasion</h6>
-							<h1>Descubre el Regalo Perfecto</h1>
-							<div class="red_button shop_now_button"><a href="#">Nuestros Productos</a></div>
-						</div>
-					</div>
+		<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="images/flores.jpg" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="images/muñequitas.jpg" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="images/plantitas.jpg" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="images/sombrero_bufanda.jpg" class="d-block w-100" alt="...">
 				</div>
 			</div>
+			<button class="carousel-control-prev" type="button" data-target="#carouselExampleFade" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-target="#carouselExampleFade" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</button>
 		</div>
 
 		<!-- Banner -->
@@ -203,23 +214,52 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4">
-						<div class="banner_item align-items-center" style="background-image:url(images/banner_1.jpg)">
+						<div class="banner_item align-items-center"
+							style="background-image:url(images/tulipanes_girasoles.jpg)">
 							<div class="banner_category">
-								<a href="categories.html">women's</a>
+								<a href="categories.html">Flores y Naturaleza</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4">
-						<div class="banner_item align-items-center" style="background-image:url(images/banner_2.jpg)">
+						<div class="banner_item align-items-center"
+							style="background-image:url(images/link_personajes.jpg)">
 							<div class="banner_category">
-								<a href="categories.html">accessories's</a>
+								<a href="categories.html">Personajes y Caricaturas</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4">
-						<div class="banner_item align-items-center" style="background-image:url(images/banner_3.jpg)">
+						<div class="banner_item align-items-center"
+							style="background-image:url(images/personalizados.JPG)">
 							<div class="banner_category">
-								<a href="categories.html">men's</a>
+								<a href="categories.html">Personalizados</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<div class="col-md-4">
+						<div class="banner_item align-items-center"
+							style="background-image:url(images/llavero_gallo.jpg)">
+							<div class="banner_category">
+								<a href="categories.html">Llaveros</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="banner_item align-items-center" style="background-image:url(images/animales.JPG)">
+							<div class="banner_category">
+								<a href="categories.html">Animalitos y Animales de Fantasia</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="banner_item align-items-center"
+							style="background-image:url(images/mas_manualidades.jpg)">
+							<div class="banner_category">
+								<a href="categories.html">Mas Manualidades!</a>
 							</div>
 						</div>
 					</div>
@@ -234,7 +274,7 @@
 				<div class="row">
 					<div class="col text-center">
 						<div class="section_title new_arrivals_title">
-							<h2>New Arrivals</h2>
+							<h2>Nuevos Amigurumis</h2>
 						</div>
 					</div>
 				</div>
@@ -243,13 +283,15 @@
 						<div class="new_arrivals_sorting">
 							<ul class="arrivals_grid_sorting clearfix button-group filters-button-group">
 								<li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center active is-checked"
-									data-filter="*">all</li>
+									data-filter="*">Todos</li>
 								<li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center"
-									data-filter=".women">women's</li>
+									data-filter=".caricaturas">Caricaturas</li>
 								<li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center"
-									data-filter=".accessories">accessories</li>
+									data-filter=".flores">Flores y Naturaleza</li>
 								<li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center"
-									data-filter=".men">men's</li>
+									data-filter=".llaveros">LLaveros</li>
+								<li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center"
+									data-filter=".animalitos">Animalitos</li>
 							</ul>
 						</div>
 					</div>
@@ -261,31 +303,25 @@
 
 							<!-- Product 1 -->
 
-							<div class="product-item men">
+							<div class="product-item *">
 								<div class="product discount product_filter">
 									<div class="product_image">
-										<img src="images/product_1.png" alt="">
+										<img src="images/aliens.PNG" alt="" style="height: 35vh; padding: 10px;">
 									</div>
-									<div class="favorite favorite_left"></div>
-									<div
-										class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center">
-										<span>-$20</span>
-									</div>
+									<div class="favorite"></div>
 									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Fujifilm X100T 16 MP Digital
-												Camera (Silver)</a></h6>
+										<h6 class="product_name"><a href="single.html">Aliens</a></h6>
 										<div class="product_price">$520.00<span>$590.00</span></div>
 									</div>
 								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
 							</div>
 
 							<!-- Product 2 -->
 
-							<div class="product-item women">
+							<div class="product-item animalitos">
 								<div class="product product_filter">
 									<div class="product_image">
-										<img src="images/product_2.png" alt="">
+										<img src="images/pinguinito.PNG" alt="" style="height:36vh; padding: 10px;">
 									</div>
 									<div class="favorite"></div>
 									<div
@@ -293,37 +329,33 @@
 										<span>new</span>
 									</div>
 									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Samsung CF591 Series Curved
-												27-Inch FHD Monitor</a></h6>
+										<h6 class="product_name"><a href="single.html">Pinguinito</a></h6>
 										<div class="product_price">$610.00</div>
 									</div>
 								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
 							</div>
 
 							<!-- Product 3 -->
 
-							<div class="product-item women">
+							<div class="product-item caricaturas">
 								<div class="product product_filter">
 									<div class="product_image">
-										<img src="images/product_3.png" alt="">
+										<img src="images/blue.PNG" alt="" style="height: 35vh; padding: 20px;">
 									</div>
 									<div class="favorite"></div>
 									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Blue Yeti USB Microphone Blackout
-												Edition</a></h6>
+										<h6 class="product_name"><a href="single.html">Blue</a></h6>
 										<div class="product_price">$120.00</div>
 									</div>
 								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
 							</div>
 
 							<!-- Product 4 -->
 
-							<div class="product-item accessories">
+							<div class="product-item llaveros">
 								<div class="product product_filter">
 									<div class="product_image">
-										<img src="images/product_4.png" alt="">
+										<img src="images/nubesita.PNG" alt="" style="height: 35vh; padding: 10px;">
 									</div>
 									<div
 										class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center">
@@ -331,37 +363,33 @@
 									</div>
 									<div class="favorite favorite_left"></div>
 									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">DYMO LabelWriter 450 Turbo
-												Thermal Label Printer</a></h6>
+										<h6 class="product_name"><a href="single.html">Nubesita</a></h6>
 										<div class="product_price">$410.00</div>
 									</div>
 								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
 							</div>
 
 							<!-- Product 5 -->
 
-							<div class="product-item women men">
+							<div class="product-item caricaturas">
 								<div class="product product_filter">
 									<div class="product_image">
-										<img src="images/product_5.png" alt="">
+										<img src="images/elefantitos.png" alt="" style="height: 35vh; padding: 9px;">
 									</div>
 									<div class="favorite"></div>
 									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Pryma Headphones, Rose Gold &
-												Grey</a></h6>
+										<h6 class="product_name"><a href="single.html">Dumbo y su mama</a></h6>
 										<div class="product_price">$180.00</div>
 									</div>
 								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
 							</div>
 
 							<!-- Product 6 -->
 
-							<div class="product-item accessories">
+							<div class="product-item flores">
 								<div class="product discount product_filter">
 									<div class="product_image">
-										<img src="images/product_6.png" alt="">
+										<img src="images/caja_rosas.PNG" alt="" style="height: 35vh; padding: 5px;">
 									</div>
 									<div class="favorite favorite_left"></div>
 									<div
@@ -369,54 +397,48 @@
 										<span>-$20</span>
 									</div>
 									<div class="product_info">
-										<h6 class="product_name"><a href="#single.html">Fujifilm X100T 16 MP Digital
-												Camera (Silver)</a></h6>
+										<h6 class="product_name"><a href="#single.html">Caja de Rosas</a></h6>
 										<div class="product_price">$520.00<span>$590.00</span></div>
 									</div>
 								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
 							</div>
 
 							<!-- Product 7 -->
 
-							<div class="product-item women">
+							<div class="product-item caricaturas">
 								<div class="product product_filter">
 									<div class="product_image">
-										<img src="images/product_7.png" alt="">
+										<img src="images/pejes.PNG" alt="" style="height: 35vh; padding: 2px;">
 									</div>
 									<div class="favorite"></div>
 									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Samsung CF591 Series Curved
-												27-Inch FHD Monitor</a></h6>
+										<h6 class="product_name"><a href="single.html">Mini Amlos</a></h6>
 										<div class="product_price">$610.00</div>
 									</div>
 								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
 							</div>
 
 							<!-- Product 8 -->
 
-							<div class="product-item accessories">
+							<div class="product-item animalitos">
 								<div class="product product_filter">
 									<div class="product_image">
-										<img src="images/product_8.png" alt="">
+										<img src="images/zorrito.PNG" alt="" style="height: 35vh; padding: 20px;">
 									</div>
 									<div class="favorite"></div>
 									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Blue Yeti USB Microphone Blackout
-												Edition</a></h6>
+										<h6 class="product_name"><a href="single.html">Zorrito</a></h6>
 										<div class="product_price">$120.00</div>
 									</div>
 								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
 							</div>
 
 							<!-- Product 9 -->
 
-							<div class="product-item men">
+							<div class="product-item llaveros">
 								<div class="product product_filter">
 									<div class="product_image">
-										<img src="images/product_9.png" alt="">
+										<img src="images/llavero_topollillo.PNG" alt="" style="height: 37vh; padding: 10px;">
 									</div>
 									<div
 										class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center">
@@ -424,29 +446,25 @@
 									</div>
 									<div class="favorite favorite_left"></div>
 									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">DYMO LabelWriter 450 Turbo
-												Thermal Label Printer</a></h6>
+										<h6 class="product_name"><a href="single.html">Topollillo</a></h6>
 										<div class="product_price">$410.00</div>
 									</div>
 								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
 							</div>
 
 							<!-- Product 10 -->
 
-							<div class="product-item men">
+							<div class="product-item caricaturas">
 								<div class="product product_filter">
 									<div class="product_image">
-										<img src="images/product_10.png" alt="">
+										<img src="images/link.PNG" alt="" style="height: 35vh; padding: 20px;">
 									</div>
 									<div class="favorite"></div>
 									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Pryma Headphones, Rose Gold &
-												Grey</a></h6>
+										<h6 class="product_name"><a href="single.html">Link</a></h6>
 										<div class="product_price">$180.00</div>
 									</div>
 								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
 							</div>
 						</div>
 					</div>
@@ -891,8 +909,7 @@
 	</div>
 
 	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="styles/bootstrap4/popper.js"></script>
-	<script src="styles/bootstrap4/bootstrap.min.js"></script>
+	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="plugins/Isotope/isotope.pkgd.min.js"></script>
 	<script src="plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
 	<script src="plugins/easing/easing.js"></script>
