--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -173,7 +173,7 @@
                 <!-- NEGOCIOS PEQUEÑOS-->
                 <div class="col-lg-6 col-md-6 col-12 d-flex justify-content-center">
                     <div class="pricing-card" id="negocios-pequeños">
-                        <img src="/img/web-service/negocios_pequeños.png" alt="Paquete Negocios Pequeños">
+                        <img src="img/web-service/negocios_pequenos.png" alt="Paquete Negocios Pequeños">
                         <h2>NEGOCIOS PEQUEÑOS</h2>
                         <div class="price">DESDE $10,000 MXN</div>
                         <ul>
@@ -198,7 +198,7 @@
                 <!--EMPRESAS MEDIANAS-->
                 <div class="col-lg-6 col-md-6 col-12 d-flex justify-content-center">
                     <div class="pricing-card" id="empresas-medianas">
-                        <img src="/img/web-service/empresas_medianas.png" alt="Paquete Empresas Medianas">
+                        <img src="img/web-service/empresas_medianas.png" alt="Paquete Empresas Medianas">
                         <h2>EMPRESAS MEDIANAS</h2>
                         <div class="price">DESDE $20,000 a $40,000 MXN</div>
                         <ul>
@@ -224,7 +224,7 @@
                 <!-- EMPRESAS GRANDES-->
                 <div class="col-lg-12 col-md-12 col-12 d-flex justify-content-center">
                     <div class="pricing-card" id="empresas-grandes">
-                        <img src="/img/web-service/empresas_grandes_corporativos.png" alt="Paquete Empresas Grandes">
+                        <img src="img/web-service/empresas_grandes_corporativos.png" alt="Paquete Empresas Grandes">
                         <h2>EMPRESAS GRANDES O CORPORATIVOS</h2>
                         <div class="price">DESDE $50,000 a $140,000 MXN</div>
                         <ul>
