Probando primera vez GA4

--- a/sitio_web_psicologa/index.html
+++ b/sitio_web_psicologa/index.html
@@ -37,6 +37,17 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G4L2RBMV4X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-G4L2RBMV4X', {
+    send_page_view: false
+  });
+</script>
 
 <body class="index-page">
 
@@ -44,7 +55,6 @@
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/logo_sin_fondo.png" alt="">
         <h1 class="sitename">Psicóloga Laura Hernandez <span>.</span> </h1>
       </a>
@@ -158,10 +168,13 @@
           <div class="col-xl-5 content sobre-mi">
             <h3>Cómo Trabajo</h3>
             <h2>Sobre Mí</h2>
-            <p> Soy <b>Laura Hernandez, Licenciada en Psicología y Maestra en Psicoterapia con Enfoque Psicoanalítico.</b> 
-              <br>Desde <b>2013</b> me dedico a acompañar procesos terapéuticos desde una escucha profunda, respetuosa y sin juicios.
-            <br>Creo en la importancia de ofrecer un espacio seguro donde puedas explorar lo que sientes, piensas y repites,y así ir comprendiendo más de ti misma/o.
-            <br><i><b>Será un gusto acompañarte en tu proceso.</b></i>
+            <p> Soy <b>Laura Hernandez, Licenciada en Psicología y Maestra en Psicoterapia con Enfoque
+                Psicoanalítico.</b>
+              <br>Desde <b>2013</b> me dedico a acompañar procesos terapéuticos desde una escucha profunda, respetuosa y
+              sin juicios.
+              <br>Creo en la importancia de ofrecer un espacio seguro donde puedas explorar lo que sientes, piensas y
+              repites,y así ir comprendiendo más de ti misma/o.
+              <br><i><b>Será un gusto acompañarte en tu proceso.</b></i>
             </p>
             <a href="#contact" class="read-more"><span>Agenda Una Cita</span><i class="bi bi-arrow-right"></i></a>
           </div>
@@ -171,23 +184,28 @@
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box">
-                  <img src="assets/img/flor_psi.png" alt="" width="130vh" height="125vh"
-                    class="mx-auto d-block">
+                  <img src="assets/img/flor_psi.png" alt="" width="130vh" height="125vh" class="mx-auto d-block">
                   <h3>Mi enfoque</h3>
                   <p>
-                  Trabajo con un <b>enfoque psicodinámico.</b> <br> Para mí es como un viaje hacia aquello que no siempre vemos de nosotros mismos. <br>
-                 <br> No se trata solo de lo que ocurre hoy, sino de comprender de dónde vienen ciertas emociones, reacciones o patrones que se repiten en tu vida.
-                 Es un espacio para hablar, reflexionar y sentirte acompañado/a en el proceso.
+                    Trabajo con un <b>enfoque psicodinámico.</b> <br> Para mí es como un viaje hacia aquello que no
+                    siempre vemos de nosotros mismos. <br>
+                    <br> No se trata solo de lo que ocurre hoy, sino de comprender de dónde vienen ciertas emociones,
+                    reacciones o patrones que se repiten en tu vida.
+                    Es un espacio para hablar, reflexionar y sentirte acompañado/a en el proceso.
                   </p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box">
-                  <img src="assets/img/manos_mariposa_psi.png" alt="" width="130vh" height="130vh" class="mx-auto d-block">
+                  <img src="assets/img/manos_mariposa_psi.png" alt="" width="130vh" height="130vh"
+                    class="mx-auto d-block">
                   <h3>Valores</h3>
-                  <p>Creo profundamente en el poder de la <b>escucha empática y respetuosa.</b> Mi compromiso es ofrecerte un espacio seguro, donde puedas expresarte libremente, sin miedo a ser juzgado/a. <br> <br>
-                  La confidencialidad, la ausencia de prejuicios, el respeto por tu historia y el acompañamiento genuino, son pilares fundamentales en cada proceso terapéutico que acompaño.</p>
+                  <p>Creo profundamente en el poder de la <b>escucha empática y respetuosa.</b> Mi compromiso es
+                    ofrecerte un espacio seguro, donde puedas expresarte libremente, sin miedo a ser juzgado/a. <br>
+                    <br>
+                    La confidencialidad, la ausencia de prejuicios, el respeto por tu historia y el acompañamiento
+                    genuino, son pilares fundamentales en cada proceso terapéutico que acompaño.</p>
                 </div>
               </div> <!-- End Icon Box -->
 
@@ -195,25 +213,32 @@
                 <div class="icon-box">
                   <img src="assets/img/cabeza_psi.png" alt="" width="150vh" height="140vh" class="mx-auto d-block">
                   <h3>Atención Personalizada</h3>
-                  <p>Brindo atención psicológica en línea, lo que me permite acompañarte estés donde estés, con la misma calidad y calidez que en un espacio presencial.
-                 <br> <br> Si prefieres sesiones presenciales tengo un espacio en Cuernavaca, Morelos.
-                <br> <br> Trabajo con niños, adolescentes, adultos y parejas, adaptando el proceso terapéutico a las necesidades y momento de vida de cada persona.</p>
+                  <p>Brindo atención psicológica en línea, lo que me permite acompañarte estés donde estés, con la misma
+                    calidad y calidez que en un espacio presencial.
+                    <br> <br> Si prefieres sesiones presenciales tengo un espacio en Cuernavaca, Morelos.
+                    <br> <br> Trabajo con niños, adolescentes, adultos y parejas, adaptando el proceso terapéutico a las
+                    necesidades y momento de vida de cada persona.
+                  </p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
                 <div class="icon-box">
-                  <img src="assets/img/flor_nube_psi.png" alt="" width="190vh" height="120vh"
-                    class="mx-auto d-block">
+                  <img src="assets/img/flor_nube_psi.png" alt="" width="190vh" height="120vh" class="mx-auto d-block">
                   <h3>Formación y supervisión clínica</h3>
-                <p>Además del trabajo clínico con pacientes, también ofrezco espacios formativos para profesionales de la salud mental. 
-                <br> <br>
-                <b>Brindo cursos y capacitaciones en psicometría y evaluación psicológica,</b>pensados para estudiantes y psicólogos/as que desean actualizarse o fortalecer sus herramientas clínicas.
-                <br><br> 
-                También realizo supervisión de casos clínicos, ofreciendo un espacio de escucha y reflexión que acompaña a otros terapeutas en el análisis de sus procesos, con respeto, ética y sin juicios.
-                <br><br> 
-                <b style="font-style: italic;">Si estás interesado/a en alguno de estos espacios, puedes escribirme con gusto.</b></p>
-                
+                  <p>Además del trabajo clínico con pacientes, también ofrezco espacios formativos para profesionales de
+                    la salud mental.
+                    <br> <br>
+                    <b>Brindo cursos y capacitaciones en psicometría y evaluación psicológica,</b>pensados para
+                    estudiantes y psicólogos/as que desean actualizarse o fortalecer sus herramientas clínicas.
+                    <br><br>
+                    También realizo supervisión de casos clínicos, ofreciendo un espacio de escucha y reflexión que
+                    acompaña a otros terapeutas en el análisis de sus procesos, con respeto, ética y sin juicios.
+                    <br><br>
+                    <b style="font-style: italic;">Si estás interesado/a en alguno de estos espacios, puedes escribirme
+                      con gusto.</b>
+                  </p>
+
                 </div>
               </div> <!-- End Icon Box -->
 
@@ -1375,7 +1400,27 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script>
+    function trackPageView(url) {
+      gtag('config', 'G-XXXXXXX', {
+        page_path: url
+      });
+      console.log("Vista registrada:", url);
+    }
 
+    // Detectar clics en enlaces del menú
+    document.querySelectorAll('a[href^="index.html#"]').forEach(link => {
+      link.addEventListener('click', function (e) {
+        const hash = this.getAttribute('href').split('#')[1];
+        trackPageView('/#' + hash);
+      });
+    });
+
+    // También registrar la visita inicial a la página principal
+    window.addEventListener('load', () => {
+      trackPageView('/');
+    }); 
+  </script>
 </body>
 
 </html>
