--- a/sitio_web_psicologa/index.html
+++ b/sitio_web_psicologa/index.html
@@ -205,7 +205,8 @@
                     ofrecerte un espacio seguro, donde puedas expresarte libremente, sin miedo a ser juzgado/a. <br>
                     <br>
                     La confidencialidad, la ausencia de prejuicios, el respeto por tu historia y el acompañamiento
-                    genuino, son pilares fundamentales en cada proceso terapéutico que acompaño.</p>
+                    genuino, son pilares fundamentales en cada proceso terapéutico que acompaño.
+                  </p>
                 </div>
               </div> <!-- End Icon Box -->
 
@@ -1402,7 +1403,7 @@
   <script src="assets/js/main.js"></script>
   <script>
     function trackPageView(url) {
-      gtag('config', 'G-XXXXXXX', {
+      gtag('config', 'G-G4L2RBMV4X', {
         page_path: url
       });
       console.log("Vista registrada:", url);
@@ -1418,8 +1419,19 @@
 
     // También registrar la visita inicial a la página principal
     window.addEventListener('load', () => {
-      trackPageView('/');
-    }); 
+      trackPageView('window.location.pathname');
+    });
+    // Rastrear clics en enlaces hacia #contact
+    document.querySelectorAll('a[href="#contact"]').forEach(function (link) {
+      link.addEventListener('click', function () {
+        gtag('event', 'clic_contacto', {
+          'event_category': 'Interacción',
+          'event_label': 'Botón Agenda Una Cita',
+          'value': 1
+        });
+        console.log("Evento enviado: clic_contacto");
+      });
+    });
   </script>
 </body>
 
